	* HottAdapter* -  fix start time stamp calculation while special case receiver data only analysis
	* HottAdapter - fix wrong sensor sequence reference while import *.bin with single ESC sensor module connected.
	* Hitec DRX1 - add support (identical Hitex RDX1 Pro is the 100W version)
	* Hitec X1 Red - add support
	* iMax B6 mini - add support (iMax B6 AC V2)
	
History analysis
	# Flexibility
	.. OpenStreetMap GeoCodes (now prioritized over GoogleMaps)
	      ! -> Clear the location cache via the 'Clear cache' button
    .. Add warning and event bits support to HoTTAdapter1/2
		>> WB pls delete in the official version
		- Add raw trail types and warning bits consolidation (V34)
		- Add raw scores support
		- Add binary packages builds
	.. Facilitate using the jars in other systems
		>> WB pls delete in the official version
		- Reduce Settings class dependencies from the gde.ui package
		- Add support for DataExplorer instantiation without UI
	# Performance
	.. Leverage multicore processors
		>> WB pls delete in the official version
		- Enhance performance via threadsafe HoTTbinHistoReaders
		- isFilterTextModus is active permanently for histo readers
		- Use analyzer objects
		- Use pickerParameters objects
		- threadsafe histo functionality
	.. Boost HoTTAdapter2 import speed
		>> WB pls delete in the official version
		- Fix the excessive sampling rate with native imports and HoTTAdapter2
		- Reduce the oversampling rate with native imports and HoTTAdapter2
	.. New histo cache version with accelerated read access
		>> WB pls delete in the official version
		- Enhance performance via threadsafe HoTTbinHistoReaders
		- Add settings entry for xml cache
	.. diverse optimizations
		>> WB pls delete in the official version
		- Avoid synchronized method performance penalty
		- Enhance the Quantile classes for better performance
		- Enhance removing constant outliers from the quantile population
	# Processing
	.. Fix start timestamp calculation for HoTT native logs